# notice

./: README.md  keep_alive.py  key.json  main.py  notices.csv  phone.csv  pyproject.toml  sel.py
templates/: index.html  success.html
